--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/EdgeShapers.exe"
+export_path="../edgeshapers_export/EdgeShapers.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
